chore(settings.py): use new development db
Rename db.sqlite to db-deprecated.sqlite, since the database itself
should not be committed. Instead, use Django's migrations to spin up a
local development database.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # vim swap files
 *.sw*
 
-# existing sqlite database
+# development databases
 *.sqlite3
 
 # Below is a standard Django gitignore, taken from https://github.com/jpadilla/django-project-template/blob/master/.gitignore
