refactor: restructure Django project
Untangle `invest_game` code from other games code, and silo unused code
in a Django app called `other_games__deprecated`. Other game code would
be usable in the future, but would require additional refactoring and
database migrations first.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # development databases
 *.sqlite3
 
+# user data
+games/userdata
+
 # Below is a standard Django gitignore, taken from https://github.com/jpadilla/django-project-template/blob/master/.gitignore
 # Created by https://www.gitignore.io
 
