--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -14,6 +14,6 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: personal
+  profile: um-online-study-game
   repository: null
   workspace_type: Application
