--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -3,6 +3,10 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
     leader_only: true
 
+  02_createsu:
+    command: "source /opt/python/run/venv/bin/activate && python manage.py createsu"
+    leader_only: true
+
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: config.settings
