--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -7,6 +7,10 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python manage.py createsu"
     leader_only: true
 
+  03_collectstatic:
+    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
+    leader_only: true
+
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: config.settings
