--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,11 +1,7 @@
 branch-defaults:
-  goldpbear/prod-deployment:
-    environment: Online-Study-Game-staging
+  master:
+    environment: Online-Study-Game
     group_suffix: null
-environment-defaults:
-  Online-Study-Game-staging:
-    branch: null
-    repository: null
 global:
   application_name: Online-Study-Game
   branch: null
