chore: squash migrations

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ static/
 # user data
 games/userdata
 
+# EB builds
+.elasticbeanstalk/app_versions/
+
 # Below is a standard Django gitignore, taken from https://github.com/jpadilla/django-project-template/blob/master/.gitignore
 # Created by https://www.gitignore.io
 
