chore: add SU fixture

--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -3,8 +3,8 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
     leader_only: true
 
-  02_createsu:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py createsu"
+  02_fixture:
+    command: "source /opt/python/run/venv/bin/activate && python manage.py loaddata games/invest_game/fixtures/users.json"
     leader_only: true
 
   03_collectstatic:
@@ -14,3 +14,5 @@ container_commands:
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: config.settings
+  aws:elasticbeanstalk:application:environment:
+    DEBUG: False
