chore(ebextensions): comment out fixture container command

--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -3,9 +3,9 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
     leader_only: true
 
-  02_fixture:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py loaddata games/invest_game/fixtures/users.json"
-    leader_only: true
+  # 02_fixture:
+  #  command: "source /opt/python/run/venv/bin/activate && python manage.py loaddata games/invest_game/fixtures/users.json"
+  #  leader_only: true
 
   03_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
