--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -5,3 +5,5 @@ option_settings:
     WSGIPath: config/wsgi.py
     NumProcesses: 3
     NumThreads: 20
+  "aws:elasticbeanstalk:container:python:staticfiles":
+    /static/: "static/"
