--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,9 +1,11 @@
 container_commands:
   01_migrate:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
+    leader_only: false
 
   02_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
+    leader_only: false
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
